requirements file updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
+appdirs==1.4.3
+Babel==2.8.0
 Django==2.2
+django-extensions==2.2.8
+django-filter==2.2.0
+django-phonenumber-field==4.0.0
+djangorestframework==3.11.0
+jedi==0.16.0
+Markdown==3.2.1
+parso==0.6.2
+phonenumbers==8.11.5
 pkg-resources==0.0.0
+prompt-toolkit==3.0.3
+ptpython==3.0.1
+Pygments==2.5.2
 pytz==2019.3
+six==1.14.0
 sqlparse==0.3.1
+wcwidth==0.1.8
