--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appdirs==1.4.3
 Babel==2.8.0
 Django==2.2
+django-background-tasks==1.2.5
+django-compat==1.0.15
 django-extensions==2.2.8
 django-filter==2.2.0
 django-phonenumber-field==4.0.0
